--- a/package.json
+++ b/package.json
@@ -81,5 +81,5 @@
     "axios": "^0.21.1"
   },
   "license": "MIT",
-  "repository": "snapshot-labs/snapshot"
+  "repository": "sunappushotto/sunappushotto"
 }
