--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_HUB_URL=https://testnet.snapshot.org
-VITE_RELAYER_URL=https://testnet.snapshot.org
-VITE_SCORES_URL=https://score.snapshot.org
+VITE_HUB_URL=https://hub.sunappushotto.com
+VITE_RELAYER_URL=https://hub.sunappushotto.com
+VITE_SCORES_URL=https://score.sunappushotto.com
 VITE_IPFS_GATEWAY=gateway.ipfs.io
 VITE_DEFAULT_NETWORK=10000
 VITE_PUSHER_BEAMS_INSTANCE_ID=2e080021-d495-456d-b2cf-84f9fd718442
